[package]
name = "near-devgov-badges"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
near-sdk = { version = "4.1.1", features = ["abi", "unstable"] }
near-contract-standards = "4.1.1"
schemars = "0.8"

[dev-dependencies]
near-workspaces = { version = "0.7", features = ["unstable"] }
tokio = "1"

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"
# Opt into extra safety checks on arithmetic operations https://stackoverflow.com/a/64136471/249801
overflow-checks = true
